--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     </div>
   </div>
 
+  <div id="controls">
+    <button id="button1">Go to store</button>
+    <button id="button2">Go to cave</button>
+    <button id="button3">Fight dragon</button>
+  </div>
+
 </body>
 <script src="./js/script.js">
 
