agregando el resto de divs

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <button id="button3">Fight dragon</button>
   </div>
 
+  <div id="monsterStats"></div>
+  <div id="text"></div>
+
 </body>
 <script src="./js/script.js">
 
